Some major bugs are fixed.

--- a/Source/CRMLite.UI/Areas/CRM/Views/Account/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Account/Index.cshtml
@@ -11,7 +11,7 @@
            
                 @if (PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageAccount))
 {
-    <button type="button" class="btn btn-primary pull-right m-r m-t-lg " data-bind="click:gotoAccountPage"><i class="fa fa-plus"></i></button>
+    <button type="button" class="btn btn-primary pull-right m-r m-t-lg " data-bind="click:gotoAccountPage"><i class="fa fa-plus"> Create</i></button>
 }
           
        
