--- a/Source/CRMLite.UI/Areas/CRM/Views/Home/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Home/Index.cshtml
@@ -3,9 +3,10 @@
         <div class="col-md-12 m-top20">
             <h4 class="text-primary">Sales Status</h4>
         </div>
-            <div id="barChart" style="width: 500px; float: left"></div>
+            <div id="barChart" style=" float: left"></div>
         </div>
-    <div class="col-lg-6  m-30 clearfix ">
+    <div class="col-lg-6 col-sm-12 col-xs-12  m-30 clearfix ">
+        @*<div class="col-lg-6  m-30 clearfix ">*@
         <h4 class="text-primary">Lead Status</h4>
         <div id="doNutChart"
              style="width: 500px; float: left"></div>
