--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/Details.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/Details.cshtml
@@ -4,7 +4,7 @@
 }
 <div class="col-md-12">
 <h3 class="inline-b">
-    Details</h3>
+   Lead Details</h3>
     <div data-bind="loading:$root.isBusy()">
         <input type="hidden" id="hdnLeadId" value="@ViewBag.LeadId" />
         <div data-bind="with:selectedLead">
