--- a/Source/CRMLite.UI/Areas/CRM/Views/Potential/Details.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Potential/Details.cshtml
@@ -3,7 +3,7 @@
 }
 <div class="col-md-12">
     <h3 class="inline-b">
-        Details
+        Potential  Details
                  </h3>
     </div>
         <input type="hidden" id="hdnPotentialId" value="@ViewBag.PotentialId" />
