--- a/Source/CRMLite.UI/Areas/CRM/Views/User/Details.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/User/Details.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Details";
 }
 <div class="col-md-12">
-    <h3 class="inline-b">Details</h3>
+    <h3 class="inline-b">User Details</h3>
 </div>
 <input type="hidden" id="hdnUserId" value="@ViewBag.UserId" />
 <div>
