--- a/Source/CRMLite.UI/Views/User/SignIn.cshtml
+++ b/Source/CRMLite.UI/Views/User/SignIn.cshtml
@@ -65,7 +65,7 @@
                         
                       </div>
     @*<input type="submit" class="submit" value="" />*@
-                        <a href="/User/ForgotPassword" class="pull-right" style="color: #fff; padding-top: 7px;">Forgot password?</a>
+                        <a href="/User/ForgotPassword" class="pull-right" style="color: #808080; padding-top: 7px;">Forgot password?</a>
                    <div class="validation-summary-errors" style="background: white;">@ViewBag.Message</div>
                    
 
