--- a/Source/CRMLite.UI/Areas/CRM/Views/Account/Edit.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Account/Edit.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Edit";
 }
 <div class="col-md-12">
-    <h2>Edit</h2>
+    <h2>Edit Account</h2>
 </div>
 <div>
     <div data-bind="loading:$root.isBusy">
@@ -63,13 +63,13 @@
 
                     <div class="form-group">
                         <label>Description</label>
-                        <textarea data-bind="value:Comment" class=" form-control" rows="4"></textarea>
+                        <textarea data-bind="value:Description" class=" form-control" rows="4"></textarea>
                     </div>
 
                 </div>
             </div>
             <div class="col-lg-12">
-                <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.updateAccount"><span class=" ladda-label">Update</span></button>
+                <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.updateAccount"><span class=" ladda-label"><span class=" ladda-label"><i class="fa fa-check"></i> Update</span></button>
             </div>
 
         </div>
