--- a/Source/CRMLite.UI/Areas/CRM/Views/Contact/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Contact/Index.cshtml
@@ -10,7 +10,7 @@
    
         @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageContact))
 {
-    <button type="button" class="btn btn-primary pull-right m-r-xs m-t-lg m-b-sm " data-bind="click:gotoContactPage"><i class="fa fa-plus"></i></button>
+    <button type="button" class="btn btn-primary pull-right m-r-xs m-t-lg m-b-sm " data-bind="click:gotoContactPage"><i class="fa fa-plus"></i> Create</button>
 }
     
 
@@ -37,8 +37,7 @@
             <thead class="bg-grey">
                 <tr>
                     <th class="text-center">Contact No </th>
-                    <th class="text-center">First Name </th>
-                    <th class="text-center">Last Name </th>
+                    <th class="text-center">Name </th>
                     <th class="text-center">Title</th>
                     @*<th class="text-center">Related To</th>*@
                     <th class="text-center">Email </th>
@@ -50,8 +49,7 @@
             <tbody data-bind='foreach:$root.ContactLists'>
                 <tr>
                     <td><span data-bind="text: RefId"> </span></td>
-                    <td><span data-bind="text: FirstName"> </span></td>
-                    <td><span data-bind="text: LastName"> </span></td>
+                    <td><span data-bind="text: Name"> </span></td>
                     <td><span data-bind="text: Title"> </span></td>
                     @*<td><span data-bind="text: AccountName"> </span></td>*@
                     <td><span data-bind="text: Email"> </span></td>
