--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/ConvertLead.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/ConvertLead.cshtml
@@ -10,7 +10,7 @@
         <div data-bind="template:{name:'convert-Lead-template',data:selectedConvertLead}">
         </div>
         <div class="col-lg-12">
-            <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.convertingLead"><span class=" ladda-label">Convert</span></button>
+            <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.convertingLead"><span class=" ladda-label"><span class=" ladda-label"><i class="fa fa-save"></i> Convert</span></button>
 
         </div>
     </div>
@@ -60,13 +60,13 @@
                 <div class="form-group">
                     <label>Expected Closing Date</label>
                     @*<div id="datetimepicker1" class="input-append date">
-                            <input data-format="dd/MM/yyyy" type="text" class="form-control" id="datePickerPoint" />
+                            <input data-format="yyyy-MM-dd" type="text" class="form-control" id="datePickerPoint" />
                             <span class="add-on">
                                 <i class="fa fa-calendar" data-time-icon="icon-time"></i>
                             </span>
                         </div>*@
                     <div id="datetimepicker3" class="input-append date">
-                        <input data-format="dd/MM/yyyy" type="text" class="form-control" id="datePickerPoint" />
+                        <input data-format="yyyy-MM-dd" type="text" class="form-control" id="datePickerPoint" />
                         <span class="add-on">
                             <i class="fa fa-calendar" data-time-icon="icon-time"></i>
                         </span>
