--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/Create.cshtml
@@ -34,15 +34,16 @@
                             <select data-bind="options: $root.Leadsource ,optionsText: 'Name',optionsValue: 'Id', value:SelectedLeadSource, optionsCaption:'Select LeadSource'" class="form-control"></select>
                         </div>
                         <div class="form-group">
-                            <label>Assign To</label>
-                            <select data-bind="options: $root.Assignto ,optionsText: 'Name',optionsValue: 'Id', value:SelectedAssignedTo" class="form-control"></select>
-                        </div>
-                        <div class="form-group">
                             <label data-bind="visible:IsDropdownVisbility">User</label>
                             <select data-bind="options: $root.Assignto ,optionsText: 'Name',optionsValue: 'Id', value:SelectedOptionalUser, optionsCaption:'Select User',visible:IsDropdownVisbility" class="form-control"></select>
                             <label data-bind="visible:IsTextBox">Other</label>
                             <input type="text" data-bind="value:Other,visible:IsTextBox" class="form-control" />
                         </div>
+                        <div class="form-group">
+                            <label>Assign To</label>
+                            <select data-bind="options: $root.Assignto ,optionsText: 'Name',optionsValue: 'Id', value:SelectedAssignedTo" class="form-control"></select>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -73,13 +74,13 @@
             <div class="col-lg-6">
                 <div class="form-group">
                     <label>Description</label>
-                    <textarea data-bind="value:Comments" class=" form-control"
+                    <textarea data-bind="value:Comment" class=" form-control"
                               rows="2"></textarea>
                 </div>
             </div>
         </div>
         <div class="col-md-12">
-            <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveLead"><span class=" ladda-label">Save</span></button>
+            <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveLead"><span class=" ladda-label"><i class="fa fa-save"></i> Save</span></button>
         </div>
     </div>
 </div>
