--- a/Source/CRMLite.UI/Areas/CRM/Views/User/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/User/Create.cshtml
@@ -55,7 +55,7 @@
 </div>
 <div class="col-md-12">
 
-    <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveUser"><span class=" ladda-label">Save</span></button>
+    <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveUser"><span class=" ladda-label"><i class="fa fa-save"></i> Save</span></button>
 
 </div>
 
