--- a/Source/CRMLite.UI/Areas/CRM/Views/User/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/User/Index.cshtml
@@ -13,7 +13,7 @@
        
             @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageUser))
 {
-    <button type="button" class="btn btn-primary pull-right m-r-xs m-t-lg m-bottom10 " data-bind="click:gotoUserPage"><i class="fa fa-plus"></i></button>
+    <button type="button" class="btn btn-primary pull-right m-r-xs m-t-lg m-bottom10 " data-bind="click:gotoUserPage"><i class="fa fa-plus"></i> Create</button>
 }
         
   
@@ -37,8 +37,7 @@
         <table class="table table-striped table-bordered table-responsive table-hover" data-toggle="table" id="pagination" data-url="data2.json" data-pagination="true" data-search="true">
             <thead class="bg-grey">
             <tr>
-                <th class="text-center">First Name </th>
-                <th class="text-center">Last Name </th>
+                <th class="text-center">Name </th>
                 <th class="text-center">Email</th>
                 <th class="text-center">Phone</th>
                 <th class="text-center"> Actions </th>
@@ -46,8 +45,7 @@
             </thead>
             <tbody data-bind='foreach:$root.UserLists'>
             <tr>
-                <td><span data-bind="text: firstname"> </span></td>
-                <td><span data-bind="text: lastname"> </span></td>
+                <td><span data-bind="text: name"> </span></td>
                 <td><span data-bind="text: email"> </span></td>
                 <td><span data-bind="text: phoneNumber"> </span></td>
                 <td>
