--- a/Source/CRMLite.UI/Areas/CRM/Views/User/List.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/User/List.cshtml
@@ -58,7 +58,7 @@
             </div>
             <div class=" clearfix"></div>
             <div class="col-md-12">
-                <button type="button" class="btn btn-primary" data-bind="click:$root.saveUser">Convert</button>
+                <button type="button" class="btn btn-primary" data-bind="click:$root.saveUser"><span class=" ladda-label"><i class="fa fa-save"></i> Convert</button>
                 <button type="button" class="btn btn-danger">Cancel</button>
             </div>
         </div>
