--- a/Source/CRMLite.UI/Areas/CRM/Views/User/Update.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/User/Update.cshtml
@@ -4,7 +4,7 @@
 <div class="">
     <div class="col-md-6 row">
         <div class="col-md-12 m-top20">
-            <h3 class="inline-b">Update User Details</h3>
+            <h3 class="inline-b">Edit User</h3>
         </div>
         </div>
     <div class="clearfix"></div>
@@ -23,7 +23,7 @@
                     </div>
                     <div class="form-group">
                         <label>Email</label>
-                        <input type="text" data-bind="value:email" class="form-control" />
+                        <input type="text" data-bind="value:email" disabled="disabled" class="form-control" />
                     </div>
 
                     <div class="form-group">
@@ -61,7 +61,7 @@
                 <div class="clearfix"></div>
                 <div class="col-md-12 pad0 padT0">
                     @*<button type="button" class="btn btn-primary" data-bind="click:$root.saveUserProfile">Update</button>*@
-                    <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveUserProfile"><span class=" ladda-label">Update</span></button>
+                    <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveUserProfile"><span class=" ladda-label"><span class=" ladda-label"><i class="fa fa-check"></i> Update</span></button>
                 </div>
             </div>
         </div>
