--- a/Source/CRMLite.UI/Content/css/menu-bar.css
+++ b/Source/CRMLite.UI/Content/css/menu-bar.css
@@ -801,7 +801,10 @@ textarea.input-group-sm>.form-control, textarea.input-group-sm>.input-group-addo
 	padding-bottom: 15px;
 }
 .navbar-nav.navbar-right:last-child {
-	margin-right: -15px;
+    margin-right: -15px;
+    position: absolute;
+    right: 0px;
+    top: 0px;
 }
 }
 
@@ -2787,9 +2790,11 @@ img{
     width:100%;
 }
 .header, .footer {
-	min-height: 50px;
-	padding: 0 15px;
+    min-height: 60px;
+    padding: 0 15px;
 }
+
+
 .header>p, .footer>p {
 	margin-top: 15px;
 	display: inline-block;
