--- a/Source/CRMLite.UI/Views/User/ForgotPassword.cshtml
+++ b/Source/CRMLite.UI/Views/User/ForgotPassword.cshtml
@@ -9,7 +9,7 @@
     <div class="login-form">
             <h3 class="login-form-header-title">Forgot Password</h3>
             <div class="login-wrap">
-                <h3>Enter the email id you provided when you registered on propznetcrm. a password will be sent on your registered email id.</h3>
+                <h3>Enter the email id you provided when you registered on crmlite. a password will be sent on your registered email id.</h3>
                 @using (Html.BeginForm("ForgotPassword", "User", FormMethod.Post))
                 {
                         <div class="input">
@@ -18,7 +18,7 @@
                             @*@Html.ValidationMessageFor(model =>model.Email)*@
                         </div>
                     
-                     
+                      <a href="/User/SignIn" class="pull-right" style="color: #808080; padding-top: 7px;">Back To Login</a>
                     
                         <div class="form-group">
                             <button type="submit" class="submit"><i class="fa fa-long-arrow-right"></i></button>
