--- a/Source/CRMLite.UI/Areas/CRM/Views/Potential/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Potential/Create.cshtml
@@ -86,7 +86,7 @@
 </div>
     <div>
         <div class="col-md-12">
-            <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.savePotential"><span class=" ladda-label">Save</span></button>
+            <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.savePotential"><span class=" ladda-label"><i class="fa fa-save"></i> Save</span></button>
         </div>
     </div>
 
@@ -150,7 +150,7 @@
                 </div>
                 <div class="modal-footer">
 
-                    <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.CreateAccount"><span class=" ladda-label">Save</span></button>
+                    <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.CreateAccount"><span class=" ladda-label"><i class="fa fa-save"></i> Save</span></button>
                 </div>
                 
             </div>
