--- a/Source/CRMLite.UI/Views/Shared/_Layout.cshtml
+++ b/Source/CRMLite.UI/Views/Shared/_Layout.cshtml
@@ -117,7 +117,9 @@
                 </div>
             </section>
             <!-- <footer class="footer hidden-xs no-padder text-center-nav-xs"> <a href="#" data-toggle="ajaxModal" class="btn btn-icon icon-muted btn-inactive pull-right m-l-xs m-r-xs hidden-nav-xs"> <i class="i i-logout"></i> </a> </footer>-->
+            <div class="copyright">© 2015 - CRMLite</div>
         </section>
+        
     </aside>
     <!-- /.aside -->
     <section id="content">
@@ -188,10 +190,15 @@
                 <!-- / side content -->
             </section>
             <a href="#" class="hide nav-off-screen-block" data-toggle="class:nav-off-screen,open" data-target="#nav,html"></a>
+            
         </div>
+       
     </section>
+    
 </section>
+    
 </div>
+    
     <script src="~/Content/js/jquery-2.1.1.min.js"></script>
            @*<script src="//cdn.jsdelivr.net/jquery/2.1.1/jquery.min.js"></script>*@
            @Scripts.Render("~/Content/Js/BootstrapminJs")
