--- a/Source/CRMLite.UI/Areas/CRM/Views/Account/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Account/Create.cshtml
@@ -67,7 +67,7 @@
     <div>
         <div class="col-md-12">
             @*<button type="button" class="btn btn-primary" data-bind="">Save</button>*@
-            <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveAccount"><span class=" ladda-label">Save</span></button>
+            <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveAccount"><span class=" ladda-label"><i class="fa fa-save"></i> Save</span></button>
         </div>
     </div>
 </div>
