--- a/Source/CRMLite.UI/Areas/CRM/Views/Account/Edit.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Account/Edit.cshtml
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="col-lg-12">
-                <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.updateAccount"><span class=" ladda-label">Update</span></button>
+                <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.updateAccount"><span class=" ladda-label"><i class="fa fa-file-text"></i> Update</span></button>
             </div>
 
         </div>
