--- a/Source/CRMLite.UI/Areas/CRM/Views/Contact/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Contact/Create.cshtml
@@ -113,7 +113,7 @@
             </div>
         </div>
         @*<button type="button" class="btn btn-primary" data-bind="click:$root.saveContact">Save</button>*@
-        <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveContact"><span class=" ladda-label">Save</span></button>
+        <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveContact"><span class=" ladda-label"><i class="fa fa-save"></i> Save</span></button>
     </div>
     </div>
 @section scripts{
