--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/Edit.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/Edit.cshtml
@@ -82,7 +82,7 @@
             </div>
 </div>
     <div class="col-lg-12">
-        <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.updateLead"><span class=" ladda-label">Update</span></button>
+        <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.updateLead"><span class=" ladda-label"><i class="fa fa-file-text"></i> Update</span></button>
          
     </div>
 </div>
