--- a/Source/CRMLite.UI/Areas/CRM/Views/Potential/Edit.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Potential/Edit.cshtml
@@ -91,8 +91,8 @@
 
                 <div>
                         <div class="m-t-lg">
-                        <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.updatePotential"><span class=" ladda-label">Update</span></button>
-                        
+                        <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.updatePotential"><span class=" ladda-label"><i class="fa fa-file-text"></i> Update</span></button>
+                         
                     </div>
                 </div>
             </div>
