--- a/Source/CRMLite.UI/Areas/CRM/Views/User/Edit.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/User/Edit.cshtml
@@ -58,7 +58,7 @@
 
                 </div>
                 <div class="col-md-12 pad0 padT0">
-                    <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveUserProfile"><span class=" ladda-label">Update</span></button>
+                    <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveUserProfile"><span class=" ladda-label"><i class="fa fa-file-text"></i> Update</span></button>
                     @*<button type="button" class="btn btn-primary" data-bind="">Update</button>*@
                 </div>
             </div>
