--- a/Source/CRMLite.UI/Content/css/login.css
+++ b/Source/CRMLite.UI/Content/css/login.css
@@ -245,6 +245,14 @@
 .main-title .thin {
 	font-weight: 200;
 }
+.validation-summary-errors{
+    font-size:13px;
+    font-weight:600;
+    color:red;
+    text-align:center;
+    padding:10px;
+
+}
 
 @media only screen and (max-width : 768px) {
 	.demo-1 .main-title, 
@@ -275,9 +283,20 @@
   /* z-index: 1; */
   overflow-x: hidden;
 }
+    .input {
+        margin-left:0%;
+        margin-right:0%;
+    }
+    .bottom{
+        display:none;
+    }
 }
 @media only screen and (min-width : 320px) and (max-width : 470px){
     .login{
         width:95%;
+    }
+    .input {
+        margin-left:0% !important;
+        margin-right:0% !important;
     }
 }
