--- a/Source/CRMLite.UI/Views/User/SignIn.cshtml
+++ b/Source/CRMLite.UI/Views/User/SignIn.cshtml
@@ -57,7 +57,7 @@
                             @Html.PasswordFor(model => model.Password, new { @placeholder = "Enter your password"})
 
                         </div>
-                 
+                 <div class="validation-summary-errors">@ViewBag.Message</div>
                     <div class="clearfix"></div>
                     <button type="submit" class="submit"><i class="fa fa-long-arrow-right"></i></button>
                      <div class="feedback">
@@ -66,7 +66,7 @@
                       </div>
     @*<input type="submit" class="submit" value="" />*@
                         <a href="/User/ForgotPassword" class="pull-right" style="color: #fff; padding-top: 7px;">Forgot password?</a>
-                   <div class="validation-summary-errors" style="background: white;">@ViewBag.Message</div>
+                   
                    
 
                 }
