--- a/Source/CRMLite.UI/Areas/CRM/Views/Contact/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Contact/Index.cshtml
@@ -10,7 +10,7 @@
    
         @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageContact))
 {
-    <button type="button" class="btn btn-primary pull-right m-r-xs m-t-lg m-b-sm " data-bind="click:gotoContactPage"><i class="fa fa-plus"></i> Create</button>
+    <button type="button" class="btn btn-primary pull-right  m-t-lg m-b-sm " data-bind="click:gotoContactPage"><i class="fa fa-plus"></i> Create</button>
 }
     
 
