--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/Index.cshtml
@@ -10,7 +10,7 @@
     
         @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageLead))
 {
-    <button type="button" class="btn btn-primary pull-right m-r-xs m-b-sm m-t-lg " data-bind="click:gotoCreatePage">
+    <button type="button" class="btn btn-primary pull-right  m-b-sm m-t-lg" data-bind="click:gotoCreatePage">
         <i class="fa fa-plus"></i> Create</button>
 }
    
@@ -29,15 +29,15 @@
         <div class="col-md-4 ">
             <select data-bind="options: $root.Assignto ,optionsText: 'Name', optionsValue: 'Id',value:SelectedSearchAssignedTo, optionsCaption:'Assigned To'" class="form-control"></select>
         </div>
-        <div class="pull-right">
+        <div class="pull-right f-width">
             <button type="button" class="btn btn-primary f-width" data-bind="click:search"><i class="fa fa-search"></i> Search</button>
             @*<div id="datetimepicker1" class="input-append date">
-                    <input data-format="yyyy-MM-dd" type="text" class="form-control" id="ExpectedDate"/>
-                    <span class="add-on">
-                        <i class="fa fa-calendar" data-time-icon="icon-time"></i>
+                <input data-format="yyyy-MM-dd" type="text" class="form-control" id="ExpectedDate"/>
+                <span class="add-on">
+                    <i class="fa fa-calendar" data-time-icon="icon-time"></i>
 
-                    </span>
-                </div>*@
+                </span>
+            </div>*@
         </div>
     </div>
 
