--- a/Source/CRMLite.UI/Areas/CRM/Views/User/Details.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/User/Details.cshtml
@@ -8,8 +8,7 @@
 <input type="hidden" id="hdnUserId" value="@ViewBag.UserId" />
 <div>
     <div data-bind="loading:$root.isBusy">
-        <div class="col-lg-3" col-xs-12>
-
+        <div class="col-lg-3 col-xs-12">
             <div class="form-group">
                 <img data-bind="attr:{src:selectedUser().image}" class="imgsize" />
             </div>
