--- a/Source/CRMLite.UI/Areas/CRM/Views/Account/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Account/Index.cshtml
@@ -11,7 +11,7 @@
            
                 @if (PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageAccount))
 {
-    <button type="button" class="btn btn-primary pull-right m-r m-t-lg " data-bind="click:gotoAccountPage"><i class="fa fa-plus"> Create</i></button>
+    <button type="button" class="btn btn-primary pull-right m-r m-t-lg " data-bind="click:gotoAccountPage"><i class="fa fa-plus"> </i> Create</button>
 }
           
        
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="col-md-3">
-                <button type="button" class="btn btn-primary" data-bind="click:search"><i class="fa fa-search"></i> Search</button>
+                <button type="button" class="btn btn-primary f-width" data-bind="click:search"><i class="fa fa-search"></i> Search</button>
             </div>
         </div>
         <div class="clearfix"></div>
