--- a/Source/CRMLite.UI/Areas/CRM/Views/Contact/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Contact/Create.cshtml
@@ -58,7 +58,6 @@
                                 <label>Zip</label>
                                 <input type="text" data-bind="value:Zip,numericOnly:true" class="form-control" />
                             </div>
-
                         </div>
                         <div class="col-md-6 ">
                             <div class="form-group">
@@ -84,36 +83,36 @@
                             <div class=" form-group">
                                 <label>State</label>
                                 <input type="text" data-bind="value:State" class="form-control" />
-                                </div>
+                            </div>
                             <div class=" form-group">
                                 <label>City</label>
-                                <input type="text" data-bind="value:City" class="form-control" />                               
+                                <input type="text" data-bind="value:City" class="form-control" />
                             </div>
                             <div class=" form-group">
                                 <label>Region</label>
                                 <input type="text" data-bind="value:Region" class="form-control" />
                             </div>
                             <div class="clearfix"></div>
-
                         </div>
-                        <div class="clearfix"></div>
+                        <div class="col-md-12">
+                            <h4 class="text-primary">Other</h4>
+                        </div>
+                        <div class="col-md-12 bdr">
+                            <div class="form-group">
+                                <label>Description</label>
+                                <textarea data-bind="value:Comments" class=" form-control" rows="6"></textarea>
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveContact"><span class=" ladda-label"><i class="fa fa-save"></i> Save</span></button>
+                        </div>
                     </div>
                 </div>
-                <div class="col-md-12 row">
-                    <h4 class="text-primary">Other</h4>
-                </div>
-                <div class="bdr">
-
-                    <div class="form-group">
-                        <label>Description</label>
-                        <textarea data-bind="value:Comments" class=" form-control" rows="6"></textarea>
-                    </div>
-
-                </div>
+              
             </div>
         </div>
         @*<button type="button" class="btn btn-primary" data-bind="click:$root.saveContact">Save</button>*@
-        <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.saveContact"><span class=" ladda-label"><i class="fa fa-save"></i> Save</span></button>
+        
     </div>
     </div>
 @section scripts{
