--- a/Source/CRMLite.UI/Areas/CRM/Views/Potential/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Potential/Create.cshtml
@@ -22,9 +22,9 @@
                             </div>
                             <div class="form-group">
                                 <label>Related To Account *</label>@*<span class="mandatory">*</span>*@
-                                <div class="col-md-11 row">
+                                <div class="f-w-9">
                                     <select id="AccountSelect" data-bind="options: $root.Account ,optionsText: 'Name', optionsValue: 'Id', value:AccountId, optionsCaption:'Select Account'" class="select2-drop-mask atagcolor form-control"></select>
-                                </div><button class="btn btn-primary m-l-lg " data-toggle="modal" data-target="#createAccount"><i class="fa fa-plus"></i></button>
+                                </div><button class="btn btn-primary" data-toggle="modal" data-target="#createAccount"><i class="fa fa-plus"></i></button>
                             </div>
                             <div class="form-group">
                                 <label>Contact</label>
@@ -65,6 +65,14 @@
                                 <select data-bind="options: $root.User ,optionsText: 'Name', optionsValue: 'Id', value:selectedAssignedTo, optionsCaption:'Select User'" class="form-control"></select>
                             </div>
                         </div>
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label>Descriptions</label>
+                                <textarea class="form-control" data-bind="value:Comments"></textarea>
+                            </div>
+                            <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.savePotential"><span class=" ladda-label"><i class="fa fa-save"></i> Save</span></button>
+                        </div>
+
                     </div>
                 </div>
                 <div class="clearfix"></div>
@@ -74,21 +82,17 @@
         <div class="col-md-12">
 
             <div class="panel-body">
-                <div class="row form-group">
-
-                    <label>Descriptions</label>
-                    <textarea class="form-control" data-bind="value:Comments"></textarea>
-
-                </div>
+              
             </div>
+        </div>
+        <div class="col-md-12">
+            
         </div>
     </div>
 </div>
-    <div>
-        <div class="col-md-12">
-            <button class="btn btn-primary ladda-button" data-style="expand-left" data-bind="ladda:$root.busy,click:$root.savePotential"><span class=" ladda-label"><i class="fa fa-save"></i> Save</span></button>
-        </div>
-    </div>
+    
+       
+    
 
     <div class="modal fade" id="createAccount" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
