--- a/Source/CRMLite.UI/Areas/CRM/Views/Potential/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Potential/Index.cshtml
@@ -10,7 +10,7 @@
         
             @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManagePotential))
 {
-    <button type="button" class="btn btn-primary pull-right m-r-xs m-t-lg m-b-sm " data-bind="click:gotoPotentialPage"><i class="fa fa-plus"></i> Create</button>
+    <button type="button" class="btn btn-primary pull-right  m-t-lg m-b-sm " data-bind="click:gotoPotentialPage"><i class="fa fa-plus"></i> Create</button>
 }
         
         <div class="clearfix"></div>
