--- a/Source/CRMLite.UI/Content/css/login.css
+++ b/Source/CRMLite.UI/Content/css/login.css
@@ -78,6 +78,7 @@
     font-size:16px;
     border-radius: 4px;
     transition: 0.2s ease-out;
+    border:none;
     color: darken(#EDEDED, 30%);
   }
      input:focus{
