--- a/Source/CRMLite.UI/Content/css/menu-bar.css
+++ b/Source/CRMLite.UI/Content/css/menu-bar.css
@@ -1535,8 +1535,7 @@ a.list-group-item-danger.active, a.list-group-item-danger.active:hover, a.list-g
 	background-color: #fff;
 	border: 1px solid transparent;
 	border-radius: 4px;
-	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
-	box-shadow: 0 1px 1px rgba(0,0,0,.05);
+	
 }
 .panel-body {
 	padding: 15px;
@@ -2371,6 +2370,8 @@ th.visible-print, td.visible-print {
 }
 .panel {
 	border-radius: 2px;
+    display:inline-block;
+    width:100%;
 }
 
 .panel.panel-default>.panel-heading, .panel.panel-default>.panel-footer {
@@ -2387,7 +2388,7 @@ th.visible-print, td.visible-print {
 }
 .panel .table thead{
 
-    border-top: 1px solid #f1f1f1;
+    border: 1px solid #f1f1f1;
 }
     .panel .table label {
         display: block;
@@ -2460,7 +2461,7 @@ th.visible-print, td.visible-print {
 	border-radius: 0 0 2px 2px;
 }
 .panel-group .panel-heading+.panel-collapse .panel-body {
-	border-top: 1px solid #eaedef;
+	border: 1px solid #eaedef;
 }
 .open {
 	z-index: 1050;
@@ -2778,7 +2779,7 @@ background-color:rgba(50,50,50,0.2);
         margin: -17px 0 0;
     }
 
-    .hbox > aside, .hbox > section {
+ .hbox > section {
         height: 678px;
         padding: 0 !important;
     }
@@ -3128,7 +3129,7 @@ html, body, .hbox, .vbox {
     margin-right:0px;
     margin-left:0px;
 }
-.f-width,.bg-light {
+.bg-light {
     border: 1px solid #f1f1f1;
   width: 100%;
   display: inline-block;
