--- a/Source/CRMLite.UI/Areas/CRM/Views/Account/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Account/Index.cshtml
@@ -127,6 +127,7 @@
     </div>
 </div>
 @section scripts{
+<script src="~/App/ViewModels/Account/AccountModel.js"></script>
 <script src="~/App/ViewModels/CRM/models.js"></script>
 <script src="~/App/ViewModels/Account/AccountViewModel.js"></script>
     <script type="text/javascript">
