--- a/Source/CRMLite.UI/Areas/CRM/Views/Potential/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Potential/Create.cshtml
@@ -167,6 +167,7 @@
         <link href="~/Content/css/select2.css" rel="stylesheet" />
         <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
         <script src="~/Content/js/select2.min.js"></script>
+        <script src="~/App/ViewModels/Account/AccountModel.js"></script>
         <script src="~/App/ViewModels/CRM/models.js"></script>
         <script src="~/App/ViewModels/Potential/PotentialViewModel.js"></script>
         <script type="text/javascript">
