--- a/Source/CRMLite.UI/Areas/CRM/Views/Settings/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Settings/Index.cshtml
@@ -30,7 +30,7 @@
                                 </div>
                                 <div class="form-group" style="margin-top: 15px;">
                                     
-                                        <button type="button" class="btn btn-primary" data-bind="click:Change">Change</button>
+                                        <button type="button" class="btn btn-primary f-width" data-bind="click:Change"><i class="fa fa-pencil"></i> Change</button>
                                    
                                 </div>
                             </div>
