--- a/Source/CRMLite.UI/Views/Shared/_Layout.cshtml
+++ b/Source/CRMLite.UI/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
             </fieldset>
         </form>
     </div>
-    <ul class="nav navbar-nav navbar-right m-n hidden-xs nav-user user">
+    <ul class="nav navbar-nav navbar-right m-n">
  
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <span class="thumb-sm avatar pull-left"> <img src="~/Content/images/logo.png" alt="..."> </span>Hello  @User.Identity.GetUserName() <b class="caret"></b> </a>
