--- a/Source/CRMLite.UI/Views/User/ChangePassword.cshtml
+++ b/Source/CRMLite.UI/Views/User/ChangePassword.cshtml
@@ -36,8 +36,8 @@
                             @Html.ValidationMessageFor(model => model.ConfirmPassword)
                         </div>
                         <div class="form-group">
-                            <input type="reset" class="btn btn-default" value="Reset" />
-                            <input type="submit" class="btn btn-primary" value="Change Password"/>
+                            <input type="reset" class="btn btn-default f-width" value="Reset" />
+                            <input type="submit" class="btn btn-primary f-width" value="Change Password"/>
                             <label class="text-success">@ViewBag.ChangedMessage</label>
                             <label class="text-danger">@ViewBag.Message</label>
                         </div>
