--- a/Source/CRMLite.UI/Areas/CRM/Views/Account/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Account/Index.cshtml
@@ -29,46 +29,48 @@
             </div>
         </div>
         <div class="clearfix"></div>
-        <div class="col-md-12">
-            <div class="row">
-                <div data-bind="loading:$root.isBusy">
-                    <table class="table table-striped table-bordered table-responsive table-hover" data-toggle="table" id="pagination" data-url="data2.json" data-pagination="true" data-search="true">
-                        <thead class="bg-grey">
-                            <tr>
-                                <th class="text-center">Account Number </th>
-                                <th class="text-center">Account Name </th>
-                                <th class="text-center">Industry </th>
-                                <th class="text-center">Website</th>
-                                <th class="text-center">Email</th>
-                                <th class="text-center">Phone</th>
-                                <th class="text-center">Assigned To</th>
-                                <th class="text-center"> Actions </th>
-                            </tr>
-                        </thead>
-                        <tbody data-bind='foreach:$root.AccountLists'>
-                            <tr>
-                                <td><span data-bind="text: RefId"> </span></td>
-                                <td><span data-bind="text: AccountName"> </span></td>
-                                <td><span data-bind="text: Industry"> </span></td>
-                                <td><span data-bind="text: Website"> </span></td>
-                                <td><span data-bind="text: Email"> </span></td>
-                                <td><span data-bind="text: Phone"> </span></td>
-                                <td><span data-bind="text: Assignedto"> </span></td>
-                                <td>
-                                    @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageAccount))
-                                    {
-                                        <a href="#" data-bind="click:$root.ToDo"><i class="fa fa-lg fa-calendar " data-toggle="tooltip" data-placement="top" title="To Do" data-original-title="To Do"></i></a>@:&nbsp;&nbsp;
-                                        <a href="#" data-bind="click:$root.getEditPage"><i class="fa fa-lg fa-pencil-square-o " data-toggle="tooltip" data-placement="top" title="Edit" data-original-title="Edit"></i></a>@:&nbsp;&nbsp;
-                                        <a href="#" data-bind="click:$root.accountdelete"><i class="fa fa-lg fa-trash-o" data-toggle="tooltip" data-placement="top" title="Delete" data-original-title="Delete"></i></a>
-                                    }
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+        <div class="scroll-horrizontal">
+            <div class="col-md-12">
+                <div class="row">
+                    <div data-bind="loading:$root.isBusy">
+                        <table class="table table-striped table-bordered table-responsive table-hover" data-toggle="table" id="pagination" data-url="data2.json" data-pagination="true" data-search="true">
+                            <thead class="bg-grey">
+                                <tr>
+                                    <th class="text-center">Account Number </th>
+                                    <th class="text-center">Account Name </th>
+                                    <th class="text-center">Industry </th>
+                                    <th class="text-center">Website</th>
+                                    <th class="text-center">Email</th>
+                                    <th class="text-center">Phone</th>
+                                    <th class="text-center">Assigned To</th>
+                                    <th class="text-center"> Actions </th>
+                                </tr>
+                            </thead>
+                            <tbody data-bind='foreach:$root.AccountLists'>
+                                <tr>
+                                    <td><span data-bind="text: RefId"> </span></td>
+                                    <td><span data-bind="text: AccountName"> </span></td>
+                                    <td><span data-bind="text: Industry"> </span></td>
+                                    <td><span data-bind="text: Website"> </span></td>
+                                    <td><span data-bind="text: Email"> </span></td>
+                                    <td><span data-bind="text: Phone"> </span></td>
+                                    <td><span data-bind="text: Assignedto"> </span></td>
+                                    <td>
+                                        @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageAccount))
+                                        {
+                                            <a href="#" data-bind="click:$root.ToDo"><i class="fa fa-lg fa-calendar " data-toggle="tooltip" data-placement="top" title="To Do" data-original-title="To Do"></i></a>@:&nbsp;&nbsp;
+                                            <a href="#" data-bind="click:$root.getEditPage"><i class="fa fa-lg fa-pencil-square-o " data-toggle="tooltip" data-placement="top" title="Edit" data-original-title="Edit"></i></a>@:&nbsp;&nbsp;
+                                            <a href="#" data-bind="click:$root.accountdelete"><i class="fa fa-lg fa-trash-o" data-toggle="tooltip" data-placement="top" title="Delete" data-original-title="Delete"></i></a>
+                                        }
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 </div>
 
 <div class="modal fade" id="Details" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
