--- a/Source/CRMLite.UI/Areas/CRM/Views/Contact/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Contact/Index.cshtml
@@ -32,43 +32,45 @@
         </div>
     </div>
     <div class="clearfix"></div>
-    <div data-bind="loading:$root.isBusy">
-        <table class="table table-striped table-bordered table-responsive table-hover" data-toggle="table" id="pagination" data-url="data2.json" data-pagination="true" data-search="true">
-            <thead class="bg-grey">
-                <tr>
-                    <th class="text-center">Contact No </th>
-                    <th class="text-center">Name </th>
-                    <th class="text-center">Title</th>
-                    @*<th class="text-center">Related To</th>*@
-                    <th class="text-center">Email </th>
-                    <th class="text-center">Phone</th>
-                    @*<th class="text-center">Assigned To</th>*@
-                    <th class="text-center"> Actions </th>
-                </tr>
-            </thead>
-            <tbody data-bind='foreach:$root.ContactLists'>
-                <tr>
-                    <td><span data-bind="text: RefId"> </span></td>
-                    <td><span data-bind="text: Name"> </span></td>
-                    <td><span data-bind="text: Title"> </span></td>
-                    @*<td><span data-bind="text: AccountName"> </span></td>*@
-                    <td><span data-bind="text: Email"> </span></td>
-                    <td><span data-bind="text: Phone"> </span></td>
-                    @*<td><span data-bind="text: AssignedTo"> </span></td>*@
-                    <td>
-                        <a href="#" data-bind="click:$root.gotoContactdetails" data-toggle="modal" data-target="#Details"><i class="fa fa-lg fa-info-circle " data-toggle="tooltip" data-placement="top" title="Details" data-original-title="Details"></i></a>&nbsp;&nbsp;
-                        @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageContact))
-                        {
-                            <a href="#" data-bind="click:$root.ToDo"><i class="fa fa-lg fa-calendar " data-toggle="tooltip" data-placement="top" title="To Do" data-original-title="To Do"></i></a>@:&nbsp;&nbsp;
-                            <a href="#" data-bind="click:$root.getEditPage"><i class="fa fa-lg fa-pencil-square-o " data-toggle="tooltip" data-placement="top" title="Edit" data-original-title="Edit"></i></a>@:&nbsp;&nbsp;
-                            <a href="#" data-bind="click:$root.contactdelete"><i class="fa fa-lg fa-trash-o" data-toggle="tooltip" data-placement="top" title="Delete" data-original-title="Delete"></i></a>
-                        }
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+    <div class="scroll-horrizontal">
+        <div data-bind="loading:$root.isBusy">
+            <table class="table table-striped table-bordered table-responsive table-hover" data-toggle="table" id="pagination" data-url="data2.json" data-pagination="true" data-search="true">
+                <thead class="bg-grey">
+                    <tr>
+                        <th class="text-center">Contact No </th>
+                        <th class="text-center">Name </th>
+                        <th class="text-center">Title</th>
+                        @*<th class="text-center">Related To</th>*@
+                        <th class="text-center">Email </th>
+                        <th class="text-center">Phone</th>
+                        @*<th class="text-center">Assigned To</th>*@
+                        <th class="text-center"> Actions </th>
+                    </tr>
+                </thead>
+                <tbody data-bind='foreach:$root.ContactLists'>
+                    <tr>
+                        <td><span data-bind="text: RefId"> </span></td>
+                        <td><span data-bind="text: Name"> </span></td>
+                        <td><span data-bind="text: Title"> </span></td>
+                        @*<td><span data-bind="text: AccountName"> </span></td>*@
+                        <td><span data-bind="text: Email"> </span></td>
+                        <td><span data-bind="text: Phone"> </span></td>
+                        @*<td><span data-bind="text: AssignedTo"> </span></td>*@
+                        <td>
+                            <a href="#" data-bind="click:$root.gotoContactdetails" data-toggle="modal" data-target="#Details"><i class="fa fa-lg fa-info-circle " data-toggle="tooltip" data-placement="top" title="Details" data-original-title="Details"></i></a>&nbsp;&nbsp;
+                            @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageContact))
+                            {
+                                <a href="#" data-bind="click:$root.ToDo"><i class="fa fa-lg fa-calendar " data-toggle="tooltip" data-placement="top" title="To Do" data-original-title="To Do"></i></a>@:&nbsp;&nbsp;
+                                <a href="#" data-bind="click:$root.getEditPage"><i class="fa fa-lg fa-pencil-square-o " data-toggle="tooltip" data-placement="top" title="Edit" data-original-title="Edit"></i></a>@:&nbsp;&nbsp;
+                                <a href="#" data-bind="click:$root.contactdelete"><i class="fa fa-lg fa-trash-o" data-toggle="tooltip" data-placement="top" title="Delete" data-original-title="Delete"></i></a>
+                            }
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            </div>
+        </div>
     </div>
-</div>
 @section scripts{
     <script src="~/Content/js/select2.min.js"></script>
     <script src="~/App/ViewModels/CRM/models.js"></script>
