--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/Index.cshtml
@@ -30,7 +30,7 @@
             <select data-bind="options: $root.Assignto ,optionsText: 'Name', optionsValue: 'Id',value:SelectedSearchAssignedTo, optionsCaption:'Assigned To'" class="form-control"></select>
         </div>
         <div class="pull-right f-width">
-            <button type="button" class="btn btn-primary f-width" data-bind="click:search"><i class="fa fa-search"></i> Search</button>
+            <button type="button" class="btn btn-primary f-width cd-as" data-bind="click:search"><i class="fa fa-search"></i> Search</button>
             @*<div id="datetimepicker1" class="input-append date">
                 <input data-format="yyyy-MM-dd" type="text" class="form-control" id="ExpectedDate"/>
                 <span class="add-on">
@@ -42,63 +42,65 @@
     </div>
 
     <div class="clearfix"></div>
-    <div data-bind="loading:$root.isBusy">
-        <table class="table table-striped table-bordered table-responsive table-hover" data-toggle="table" id="pagination" data-url="data2.json" data-pagination="true" data-search="true">
-            <thead class="bg-grey">
-                <tr>
-                    <th class="text-center">User Id </th>
-                    <th class="text-center">Name </th>
-                    <th class="text-center">Company</th>
-                    <th class="text-center">Phone</th>
-                    <th class="text-center">Website</th>
-                    <th class="text-center">Email</th>
-                    <th class="text-center">Lead Source</th>
-                    <th class="text-center">Lead Status</th>
-                    <th class="text-center">Assigned To</th>
-                    <th class="text-center">Actions </th>
-                </tr>
-            </thead>
-            <tbody data-bind='foreach:$root.LeadLists'>
-                <tr>
-                    <td><span data-bind="text: RefId"> </span></td>
-                    <td><span data-bind="text: Name"> </span></td>
-                    <td><span data-bind="text: Company"> </span></td>
-                    <td><span data-bind="text: Phone"> </span></td>
-                    <td><span data-bind="text: Website"> </span></td>
-                    <td><span data-bind="text: Email"> </span></td>
-                    <td><span data-bind="text: LeadSource"> </span></td>
-                    <td><span data-bind="text: LeadStatus"> </span></td>
-                    <td><span data-bind="text: Assignedto"> </span></td>
-                    <td>
-                        @*<a href="#">Todo</a>*@<a href="#" data-bind="click:$root.gotoLeaddetails" data-toggle="modal" data-target="#Details">
-                        <i class="fa fa-lg fa-info-circle " data-toggle="tooltip" data-placement="top" title="Details" data-original-title="Details"></i>
-                        </a>
-                        @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageLead))
-                        {
-                            <a href="#" data-bind="click:$root.update">
-                                <i class="fa fa-lg fa-pencil-square-o " data-toggle="tooltip" data-placement="top" title="Edit" data-original-title="Edit"></i>
+    <div class="scroll-horrizontal">
+        <div data-bind="loading:$root.isBusy">
+            <table class="table table-striped table-bordered table-responsive table-hover" data-toggle="table" id="pagination" data-url="data2.json" data-pagination="true" data-search="true">
+                <thead class="bg-grey">
+                    <tr>
+                        <th class="text-center">User Id </th>
+                        <th class="text-center">Name </th>
+                        <th class="text-center">Company</th>
+                        <th class="text-center">Phone</th>
+                        <th class="text-center">Website</th>
+                        <th class="text-center">Email</th>
+                        <th class="text-center">Lead Source</th>
+                        <th class="text-center">Lead Status</th>
+                        <th class="text-center">Assigned To</th>
+                        <th class="text-center">Actions </th>
+                    </tr>
+                </thead>
+                <tbody data-bind='foreach:$root.LeadLists'>
+                    <tr>
+                        <td><span data-bind="text: RefId"> </span></td>
+                        <td><span data-bind="text: Name"> </span></td>
+                        <td><span data-bind="text: Company"> </span></td>
+                        <td><span data-bind="text: Phone"> </span></td>
+                        <td><span data-bind="text: Website"> </span></td>
+                        <td><span data-bind="text: Email"> </span></td>
+                        <td><span data-bind="text: LeadSource"> </span></td>
+                        <td><span data-bind="text: LeadStatus"> </span></td>
+                        <td><span data-bind="text: Assignedto"> </span></td>
+                        <td>
+                            @*<a href="#">Todo</a>*@<a href="#" data-bind="click:$root.gotoLeaddetails" data-toggle="modal" data-target="#Details">
+                                <i class="fa fa-lg fa-info-circle " data-toggle="tooltip" data-placement="top" title="Details" data-original-title="Details"></i>
                             </a>
-                }
-                        @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ConvertLead))
-                        {
-                            <a href="#" data-bind="click:$root.convert">
-                                <i class="fa fa-lg fa-filter" data-toggle="tooltip" data-placement="top"
-                                   title="Convert Potential" data-original-title="Convert Potential"></i>
-                            </a>
-                }
-                        @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageLead))
-                    {
-                        <a href="#" data-bind="click:$root.leaddelete">
-                            <i class="fa fa-lg fa-trash-o"
-                               data-toggle="tooltip" data-placement="top" title="Delete" data-original-title="Delete"></i>
-                        </a>
-                    }
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+                            @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageLead))
+                            {
+                                <a href="#" data-bind="click:$root.update">
+                                    <i class="fa fa-lg fa-pencil-square-o " data-toggle="tooltip" data-placement="top" title="Edit" data-original-title="Edit"></i>
+                                </a>
+                            }
+                            @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ConvertLead))
+                            {
+                                <a href="#" data-bind="click:$root.convert">
+                                    <i class="fa fa-lg fa-filter" data-toggle="tooltip" data-placement="top"
+                                       title="Convert Potential" data-original-title="Convert Potential"></i>
+                                </a>
+                            }
+                            @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageLead))
+                            {
+                                <a href="#" data-bind="click:$root.leaddelete">
+                                    <i class="fa fa-lg fa-trash-o"
+                                       data-toggle="tooltip" data-placement="top" title="Delete" data-original-title="Delete"></i>
+                                </a>
+                            }
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        </div>
     </div>
-</div>
 
 <div class="modal fade" id="CreateLead" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
