--- a/Source/CRMLite.UI/Areas/CRM/Views/Potential/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Potential/Index.cshtml
@@ -31,6 +31,7 @@
             </div>
         </div>
         <div class="clearfix"></div>
+    <div class="scroll-horrizontal">
         <div data-bind="loading:$root.isBusy">
             <table class="table table-striped table-bordered table-responsive table-hover" data-toggle="table" id="pagination" data-url="data2.json" data-pagination="true" data-search="true">
                 <thead class="bg-grey">
@@ -67,6 +68,7 @@
                 </tbody>
             </table>
         </div>
+    </div>
     </div>
 
 
