--- a/Source/CRMLite.UI/Areas/CRM/Views/User/Index.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/User/Index.cshtml
@@ -13,7 +13,7 @@
        
             @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageUser))
 {
-    <button type="button" class="btn btn-primary pull-right m-t-lg m-bottom10 " data-bind="click:gotoUserPage"><i class="fa fa-plus"></i> Create</button>
+    <button type="button" class="btn btn-primary pull-right m-t-lg m-bottom10 m-b-sm" data-bind="click:gotoUserPage"><i class="fa fa-plus"></i> Create</button>
 }
         
   
@@ -29,41 +29,43 @@
             <input type="text" class="form-control" data-bind="value:SearchPhone,numericOnly:true" placeholder="Phone" />
         </div>
         <div class="pull-right f-width">
-            <button type="button" class="btn btn-primary f-width" data-bind="click:search"><i class="fa fa-search"></i> Search</button>
+            <button type="button" class="btn btn-primary f-width cd-as" data-bind="click:search"><i class="fa fa-search"></i> Search</button>
         </div>
     </div>
     <div class="clearfix"></div>
-    <div data-bind="loading:$root.isBusy">
-        <table class="table table-striped table-bordered table-responsive table-hover" data-toggle="table" id="pagination" data-url="data2.json" data-pagination="true" data-search="true">
-            <thead class="bg-grey">
-            <tr>
-                <th class="text-center">Name </th>
-                <th class="text-center">Email</th>
-                <th class="text-center">Phone</th>
-                <th class="text-center"> Actions </th>
-            </tr>
-            </thead>
-            <tbody data-bind='foreach:$root.UserLists'>
-            <tr>
-                <td><span data-bind="text: name"> </span></td>
-                <td><span data-bind="text: email"> </span></td>
-                <td><span data-bind="text: phoneNumber"> </span></td>
-                <td>
-                    &nbsp;&nbsp;&nbsp;<a href="#" data-bind="click:$root.gotoUserdetails"><i class="fa fa-lg fa-info-circle " data-toggle="tooltip" data-placement="top" title="Details" data-original-title="Details"></i></a>&nbsp;&nbsp;&nbsp;
-                    @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageUser))
-                    {
-                        <a href="#CreateUser" data-bind="click:$root.updateUserProfile"><i class="fa fa-lg fa-pencil-square-o " data-toggle="tooltip" data-placement="top" title="Edit" data-original-title="Edit"></i></a>@:&nbsp;&nbsp;&nbsp;
-                        <a href="#" data-bind="click:$root.Userdelete"><i class="fa fa-lg fa-trash-o" data-toggle="tooltip" data-placement="top" title="Delete" data-original-title="Delete"></i></a>
+    <div class="scroll-horrizontal">
+        <div data-bind="loading:$root.isBusy">
+            <table class="table table-striped table-bordered table-responsive table-hover" data-toggle="table" id="pagination" data-url="data2.json" data-pagination="true" data-search="true">
+                <thead class="bg-grey">
+                    <tr>
+                        <th class="text-center">Name </th>
+                        <th class="text-center">Email</th>
+                        <th class="text-center">Phone</th>
+                        <th class="text-center"> Actions </th>
+                    </tr>
+                </thead>
+                <tbody data-bind='foreach:$root.UserLists'>
+                    <tr>
+                        <td><span data-bind="text: name"> </span></td>
+                        <td><span data-bind="text: email"> </span></td>
+                        <td><span data-bind="text: phoneNumber"> </span></td>
+                        <td>
+                            &nbsp;&nbsp;&nbsp;<a href="#" data-bind="click:$root.gotoUserdetails"><i class="fa fa-lg fa-info-circle " data-toggle="tooltip" data-placement="top" title="Details" data-original-title="Details"></i></a>&nbsp;&nbsp;&nbsp;
+                            @if (@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageUser))
+                            {
+                                <a href="#CreateUser" data-bind="click:$root.updateUserProfile"><i class="fa fa-lg fa-pencil-square-o " data-toggle="tooltip" data-placement="top" title="Edit" data-original-title="Edit"></i></a>@:&nbsp;&nbsp;&nbsp;
+                                <a href="#" data-bind="click:$root.Userdelete"><i class="fa fa-lg fa-trash-o" data-toggle="tooltip" data-placement="top" title="Delete" data-original-title="Delete"></i></a>
+                            }
+                            @if (!@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageUser) && @RoleChecker.CheckRole(ViewBag.RoleId, RoleIds.User))
+                            {
+                                <a href="#UpdateUserProfile" data-bind="click:$root.updateUserProfile"><i class="fa fa-lg fa-pencil-square-o " data-toggle="tooltip" data-placement="top" title="Edit" data-original-title="Edit"></i></a>@:&nbsp;&nbsp;&nbsp;
                     }
-                    @if (!@PermissionChecker.CheckPermission(ViewBag.UserPermissions, PermissionCodes.ManageUser) && @RoleChecker.CheckRole(ViewBag.RoleId, RoleIds.User))
-                    {
-                        <a href="#UpdateUserProfile" data-bind="click:$root.updateUserProfile"><i class="fa fa-lg fa-pencil-square-o " data-toggle="tooltip" data-placement="top" title="Edit" data-original-title="Edit"></i></a>@:&nbsp;&nbsp;&nbsp;
-                    }
-                </td>
-            </tr>
-            </tbody>
-        </table>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
+    </div>
     </div>
 
 <div class="modal fade" id="CreateUser" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
