--- a/Source/CRMLite.UI/Views/Setting/Index.cshtml
+++ b/Source/CRMLite.UI/Views/Setting/Index.cshtml
@@ -33,8 +33,8 @@
                         </div>
                     </div>
                     <div class="form-group" style="margin-top: 15px;">
-                        <div class="col-xs-5 col-xs-offset-2">
-                            <button type="button" class="btn btn-default" data-bind="click:Change">Change</button>
+                        <div class="col-md-3 col-xs-12 col-xs-offset-2">
+                            <button type="button" class="btn btn-default" data-bind="click:Change"><i class="fa fa-edit"></i> Change</button>
                         </div>
                     </div>
                 </div>
