--- a/Source/CRMLite.UI/Views/User/UpdateProfile.cshtml
+++ b/Source/CRMLite.UI/Views/User/UpdateProfile.cshtml
@@ -33,32 +33,55 @@
                                 @Html.TextBoxFor(model => model.LastName, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.LastName)
                             </div>
+
+                        </div>
+
+                        <div class="col-md-6">
+
+                            <div class="form-group">
+                                <label for="text" class="text-size">
+                                    Phone
+                                </label>
+                                @Html.TextBoxFor(model => model.Phone, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.Phone)
+                            </div>
+                            </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="text" class="text-size">
+                                    Email
+                                </label>
+                                @Html.TextBoxFor(model => model.Email, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.Email)
+                            </div>
+                            </div>
+
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="text" class="text-size">
+                                    Address
+                                </label>
+                                @Html.TextAreaFor(model => model.Address, new { @class = "form-control", @rows = 3 })
+                                @Html.ValidationMessageFor(model => model.Address)
+                            </div>
+                        </div>
+                            @*<div class="form-group">
+                <label for="text" class="text-size">
+                    DED License Number
+                </label>
+                @Html.TextBoxFor(model => model.DEDlicenseNumber, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.DEDlicenseNumber)
+            </div>*@
+
+                        <div class="form-group col-md-12 marL-md">
+                            <input type="submit" class="btn btn-primary f-width" value="Update" />
+                            <input type="reset" class="btn btn-default f-width" value="Reset" />
+                            <label class="text-success">@ViewBag.Message</label>
+                        </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="text" class="text-size">
-                            Phone
-                        </label>
-                        @Html.TextBoxFor(model => model.Phone, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.Phone)
-                    </div>
-                    <div class="form-group">
-                        <label for="text" class="text-size">
-                            Email
-                        </label>
-                        @Html.TextBoxFor(model => model.Email, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.Email)
-                    </div>
-                    @*<div class="form-group">
-                            <label for="text" class="text-size">
-                                DED License Number
-                            </label>
-                            @Html.TextBoxFor(model => model.DEDlicenseNumber, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(model => model.DEDlicenseNumber)
-                        </div>*@
-                </div>
+                
                 @*<div class="col-md-6">
                         <div class="form-group">
                         <label for="text" class="text-size">
@@ -77,20 +100,8 @@
                                 @Html.ValidationMessageFor(model => model.RERAregistrationNumber)
                             </div>
                             </div>*@
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="text" class="text-size">
-                            Address
-                        </label>
-                        @Html.TextAreaFor(model => model.Address, new { @class = "form-control", @rows = 3 })
-                        @Html.ValidationMessageFor(model => model.Address)
-                    </div>
-                </div>
-                <div class="form-group col-md-12 marL-md">
-                    <input type="submit" class="btn btn-primary" value="Update" />
-                    <input type="reset" class="btn btn-default" value="Reset" />
-                    <label class="text-success">@ViewBag.Message</label>
-                </div>
+                
+               
             </div>
         </div>
     </div>
