--- a/Source/CRMLite.UI/Areas/CRM/Views/Account/Edit.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Account/Edit.cshtml
@@ -63,7 +63,7 @@
 
                     <div class="form-group">
                         <label>Description</label>
-                        <textarea data-bind="value:Comment" class=" form-control" rows="4"></textarea>
+                        <textarea data-bind="value:Description" class=" form-control" rows="4"></textarea>
                     </div>
 
                 </div>
