--- a/Source/CRMLite.UI/Content/css/propznet-style.css
+++ b/Source/CRMLite.UI/Content/css/propznet-style.css
@@ -1,4 +1,4 @@
-﻿
+﻿﻿
 ﻿@charset "utf-8";
 /* CSS Document */
 body {
@@ -198,7 +198,7 @@ input#searchSubmit {
 	  font-size:24px;
 	  font-family:'FontAwesome';
 	  color:#000;
-   background:url(../Content/images/search.png) no-repeat;
+   background:url(../images/search.png) no-repeat;
     border:0;
     position:absolute;
     top:20px; left:10px;
@@ -1204,7 +1204,7 @@ input#searchSubmit {
 	  font-size:24px;
 	  font-family:'FontAwesome';
 	  color:#000;
-   background:url(../Content/images/search.png) no-repeat;
+   background:url(../images/search.png) no-repeat;
     border:0;
     position:absolute;
     top:20px; left:10px;
