Lead viewmodel changed.

--- a/Source/CRMLite.UI/Areas/CRM/Views/Account/Edit.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Account/Edit.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Edit";
 }
 <div class="col-md-12">
-    <h2>Edit</h2>
+    <h2>Edit Accounts</h2>
 </div>
 <div>
     <div data-bind="loading:$root.isBusy">
