--- a/Source/CRMLite.UI/Content/css/login.css
+++ b/Source/CRMLite.UI/Content/css/login.css
@@ -8,7 +8,57 @@
   padding: 0;
   border: 0;
 }
+.input {
+    width:60%;
+	  margin-top: 14px;
+    padding:5px 15px 7px 35px;
+   
+	background:#fff !important;
+    border:1px solid #c6d2db;
+    border-top:1px solid #b4c1cb;
+    box-shadow:inset 0 1px 2px rgba(0,0,0,0.08);
+   float:left;
+   border-radius: 20px;
+    background:#e8edf1;
+}
 
+    div.input.focus {
+        border:1px solid #9ecbe2;
+        box-shadow:0 0 6px #abdcff, inset 0 1px 2px rgba(0,0,0,0.08);
+    }
+
+input#s {
+    width:100%;
+    border:0;
+    border-radius:20px;
+    background:transparent;
+    height:20px;
+    color:#b4bdc4;
+    text-shadow:0 1px 1px #fff;
+}
+
+    input#s:focus {
+        outline:none
+    }
+
+input#searchSubmit {
+    width:19px;
+    height:19px;
+    text-indent:-9999px;
+    overflow:hidden;
+	  content: "\f002";
+	  font-size:24px;
+	  font-family:'FontAwesome';
+	  color:#000;
+   background:url(../images/search.png) no-repeat;
+    border:0;
+    position:absolute;
+    top:20px; left:10px;
+    z-index:5;
+    display:block;
+    cursor:pointer;
+	  transform: rotate(90deg);
+}
 .fieldset {
 	width: 100%;
   margin: 0px;
