--- a/Source/CRMLite.UI/Views/Shared/_Layout.cshtml
+++ b/Source/CRMLite.UI/Views/Shared/_Layout.cshtml
@@ -23,7 +23,60 @@
     <div id="preloader">
     </div>
 <div class="vbox">
-<header class="bg-white header header-md navbar navbar-fixed-top-xs box-shadow">
+
+
+@* edited latest version *@
+
+    <header class="bg-white dk header navbar navbar-fixed-top-xs">
+        <div class="navbar-header aside-md">
+            <a class="btn btn-link visible-xs" id="collapse" data-toggle="class:nav-off-screen,open" data-target="#nav,html"> <i class="fa fa-bars"></i> </a>
+            <a href="#nav" id="btntoggle" data-toggle="class:nav-xs" class="btn btn-icon icon-muted btn-inactive m-l-xs m-r-xs"> <i class="fa fa-reorder text"></i> <i class="fa fa-arrow-right text-active"></i> </a>
+            <a href="/CRM/Home" class="navbar-brand"> <img src="~/Content/images/crm-lite-logo.png" class="m-r-sm m-l-lg-5" alt="scale"> <span class="hidden-nav-xs"></span> </a>
+            
+            <a class="btn btn-link visible-xs" data-toggle="class:nav-off-screen,open" data-target="#nav,html" style="
+    display: none !important;
+"><i class="fa fa-bars"></i></a>
+
+            <a class="btn btn-link visible-xs" id="settings" data-toggle="dropdown" data-target=".nav-user"><i class="fa fa-cog"></i></a>
+        </div> 
+        <ul class="nav navbar-nav hidden-xs">   </ul> 
+        <ul class="nav navbar-nav navbar-right m-n hidden-xs nav-user">  
+        <li class="dropdown"> <a href="#" class="dropdown-toggle dker search-icon" data-toggle="dropdown"><i class="fa fa-fw fa-search"></i></a>
+             <section class="dropdown-menu aside-xl animated fadeInUp"> 
+            <section class="panel bg-white"> 
+                 <form role="search">
+                 <div class="form-group wrapper m-b-none"> 
+                     <div class="input-group"> 
+                         <input type="text" name="s" id="s"  class="form-control" placeholder="Search"> 
+                     <span class="input-group-btn"> 
+                         <button type="submit" id="searchSubmit" value="" class="btn btn-info btn-icon"><i class="fa fa-search"></i></button> 
+                         </span> </div> </div> </form>
+                  </section> </section> </li> 
+        
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"> <span class="thumb-sm avatar pull-left"> <img src="~/Content/images/logo.png" alt="..."> </span>Hello  @User.Identity.GetUserName() <b class="caret"></b> </a>
+                <ul class="dropdown-menu animated fadeInRight">
+                    <li> <span class="arrow top"></span> <a href="@Url.Action("Index", "Settings", new {area = "CRM"})">Settings</a> </li>
+                    <li> <a href="@Url.Action("UpdateProfile", "User", new {area = ""})">Profile</a> </li>
+                    <li> <a href="@Url.Action("ChangePassword", "User", new {area = ""})">Change Password</a> </li>
+                    <li class="divider"></li>
+                    <li> <a href="@Url.Action("SignOut", "User", new {area = ""})">Logout</a> </li>
+                </ul>
+            </li>
+         </ul>
+    </header>
+
+
+@* end latest version *@
+
+
+
+
+
+
+
+
+@*<header class="bg-white header header-md navbar navbar-fixed-top-xs box-shadow">
     <div class="navbar-header aside-md dk"> <a class="btn btn-link visible-xs" data-toggle="class:nav-off-screen,open" data-target="#nav,html"> <i class="fa fa-bars"></i> </a> <a href="/CRM/Home" class="navbar-brand"> <img src="~/Content/images/crm-lite-logo.png" class="m-r-sm" alt="scale"> <span class="hidden-nav-xs"></span> </a> <a href="#nav" id="btntoggle" data-toggle="class:nav-xs" class="btn btn-icon icon-muted btn-inactive m-l-xs m-r-xs"> <i class="fa fa-reorder text"></i> <i class="fa fa-arrow-left text-active"></i> </a> <a class="btn btn-link visible-xs" data-toggle="dropdown" data-target=".user"> <i class="fa fa-cog"></i> </a>
     </div>
 
@@ -50,7 +103,7 @@
             </ul>
         </li>
     </ul>
-</header>
+</header>*@
 <section class="hbox stretch fixed-right">
     <!-- .aside -->
     <aside class="bg-black aside-md hidden-print hidden-xs" id="nav">
