Some issues fixed, notifications message,computed function etc.

--- a/Source/CRMLite.UI/Areas/CRM/Views/Lead/Create.cshtml
+++ b/Source/CRMLite.UI/Areas/CRM/Views/Lead/Create.cshtml
@@ -103,5 +103,5 @@
             vm.init();
         });
     </script>
-    <script src="~/Content/js/script-ladda.js"></script>
+    @*<script src="~/Content/js/script-ladda.js"></script>*@
 }
