--- a/Source/CRMLite.UI/Views/User/UpdateProfile.cshtml
+++ b/Source/CRMLite.UI/Views/User/UpdateProfile.cshtml
@@ -75,7 +75,7 @@
 
                         <div class="form-group col-md-12 marL-md">
                             <input type="submit" class="btn btn-primary f-width" value="Update" />
-                            <input type="reset" class="btn btn-default f-width" value="Reset" />
+                            @*<input type="reset" class="btn btn-default f-width" value="Reset" />*@
                             <label class="text-success">@ViewBag.Message</label>
                         </div>
                         </div>
