--- a/Source/CRMLite.UI/Content/css/dataTables.bootstrap.css
+++ b/Source/CRMLite.UI/Content/css/dataTables.bootstrap.css
@@ -1,4 +1,4 @@
-﻿div.dataTables_length label {
+div.dataTables_length label {
 	font-weight: normal;
 	text-align: left;
 	white-space: nowrap;
@@ -22,6 +22,7 @@ div.dataTables_filter label {
 div.dataTables_filter input {
 	margin-left: 0.5em;
 	display: inline-block;
+	width: auto;
 }
 
 div.dataTables_info {
@@ -41,11 +42,16 @@ div.dataTables_paginate ul.pagination {
 }
 
 @media screen and (max-width: 767px) {
+	div.dataTables_wrapper > div.row > div,
 	div.dataTables_length,
 	div.dataTables_filter,
 	div.dataTables_info,
 	div.dataTables_paginate {
 		text-align: center;
+	}
+
+	div.DTTT {
+		margin-bottom: 0.5em;
 	}
 }
 
@@ -81,18 +87,18 @@ table.dataTable thead .sorting_desc:after {
 	top: 8px;
 	right: 8px;
 	display: block;
-	font-family: 'Glyphicons Halflings';
+	font-family: FontAwesome;
 	opacity: 0.5;
 }
 table.dataTable thead .sorting:after {
 	opacity: 0.2;
-	content: "\e150"; /* sort */
+	content: "\f160"; /* sort */
 }
 table.dataTable thead .sorting_asc:after {
-	content: "\e155"; /* sort-by-attributes */
+	content: "\f161"; /* sort-by-attributes */
 }
 table.dataTable thead .sorting_desc:after {
-	content: "\e156"; /* sort-by-attributes-alt */
+	content: "\f160"; /* sort-by-attributes-alt */
 }
 div.dataTables_scrollBody table.dataTable thead .sorting:after,
 div.dataTables_scrollBody table.dataTable thead .sorting_asc:after,
@@ -106,12 +112,24 @@ table.dataTable thead .sorting_desc_disabled:after {
 }
 
 table.dataTable thead > tr > th {
-	padding-left: 8px;
 	padding-right: 30px;
 }
 
 table.dataTable th:active {
 	outline: none;
+}
+
+
+/* Condensed */
+table.dataTable.table-condensed thead > tr > th {
+	padding-right: 20px;
+}
+
+table.dataTable.table-condensed thead .sorting:after,
+table.dataTable.table-condensed thead .sorting_asc:after,
+table.dataTable.table-condensed thead .sorting_desc:after {
+	top: 6px;
+	right: 6px;
 }
 
 /* Scrolling */
@@ -159,6 +177,11 @@ table.table-bordered tbody th,
 table.table-bordered tbody td {
 	border-left-width: 0;
 	border-bottom-width: 0;
+}
+table.table-bordered tfoot th,
+table.table-bordered tfoot td {
+    border-left-width: 0;
+    border-bottom-width: 0;
 }
 table.table-bordered th:last-child,
 table.table-bordered td:last-child {
@@ -327,6 +350,16 @@ div.DTFC_RightFootWrapper table,
 div.DTFC_LeftFootWrapper table {
     border-top: none;
     margin-top: 0 !important;
+}
+
+
+div.DTFC_LeftBodyWrapper table.dataTable thead .sorting:after,
+div.DTFC_LeftBodyWrapper table.dataTable thead .sorting_asc:after,
+div.DTFC_LeftBodyWrapper table.dataTable thead .sorting_desc:after,
+div.DTFC_RightBodyWrapper table.dataTable thead .sorting:after,
+div.DTFC_RightBodyWrapper table.dataTable thead .sorting_asc:after,
+div.DTFC_RightBodyWrapper table.dataTable thead .sorting_desc:after {
+	display: none;
 }
 
 
