--- a/Source/CRMLite.UI/Content/css/propznet-style.css
+++ b/Source/CRMLite.UI/Content/css/propznet-style.css
@@ -133,7 +133,7 @@ body {
 
 @-moz-document url-prefix() 
 { 
-.copyright { bottom: 80px !important; position:relative;} 
+.copyright { bottom: 70px !important; position:relative;} 
 } 
 
 
@@ -1402,7 +1402,9 @@ hr {
 .tab-left {
   padding: 10px;
 }
-
+.dataTable {
+    width:100% !important;
+}
 
    .tab-left ul li,.tab-left ul li a{
         display: block;
@@ -1644,7 +1646,7 @@ background-color: #78828b;
 .copyright {
     text-align: center;
     position: absolute;
-    bottom: 60px;
+    bottom: 50px;
     width: 100%;
     background-color: #1b1919;
     padding: 6px;
