--- a/Source/CRMLite.UI/Views/User/ForgotPassword.cshtml
+++ b/Source/CRMLite.UI/Views/User/ForgotPassword.cshtml
@@ -5,27 +5,35 @@
     Layout = "~/Views/Shared/_LoginLayout.cshtml";
 }
 
-<div class="">
-    <div class="login-form">
-            <h3 class="login-form-header-title">Forgot Password</h3>
-            <div class="login-wrap">
-                <h3>Enter the email id you provided when you registered on crmlite. a password will be sent on your registered email id.</h3>
-                @using (Html.BeginForm("ForgotPassword", "User", FormMethod.Post))
-                {
-                        <div class="input">
-                            <span><i class="fa fa-envelope-o"></i></span>
-                            @Html.TextBoxFor(model => model.Email, new { @placeholder = "Enter your email" })
-                            @*@Html.ValidationMessageFor(model =>model.Email)*@
-                        </div>
-                    
-                      <a href="/User/SignIn" class="pull-right" style="color: #808080; padding-top: 7px;">Back To Login</a>
-                    
-                        <div class="form-group">
-                            <button type="submit" class="submit"><i class="fa fa-long-arrow-right"></i></button>
-                            @*<input type="submit" class="btn btn-primary top-mar " value="Recover" />
-                            <div class="validation-summary-errors" style="background:white;">@ViewBag.Message</div>*@
-                        </div>
-                }
+
+    <div class="login-wrap">
+    <h3 class="login-form-header-title">Forgot Password</h3>
+
+    <div class="login-wrap">
+        <h3>Enter the email id you provided when you registered on crmlite. a password will be sent on your registered email id.</h3>
+        @using (Html.BeginForm("ForgotPassword", "User", FormMethod.Post))
+        {
+            <div class="input">
+                <span><i class="fa fa-envelope-o"></i></span>
+                @Html.TextBoxFor(model => model.Email, new { @placeholder = "Enter your email" })
+                @*@Html.ValidationMessageFor(model =>model.Email)*@
             </div>
+
+
+                <button type="submit" class="submit"><i class="fa fa-long-arrow-right"></i></button>
+                @*<input type="submit" class="btn btn-primary top-mar " value="Recover" />
+                    <div class="validation-summary-errors" style="background:white;">@ViewBag.Message</div>*@
+           <div class="feedback"></div>
+
+            <a href="/User/SignIn" class="pull-right" style="color: #fff; padding-top: 7px;">Back To Login</a>
+        }
     </div>
 </div>
+
+
+   
+
+   
+
+
+
